# commit-suggestions

./: LICENSE  README.md  pyproject.toml
src/commit_suggestions/: main.py  models.py  utils.py
tests/: git_diff_parse_test.py
