[project]
name = "commit-suggestions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tyler R", email = "tyler73750@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["gitpython>=3.1.44", "openai>=1.65.4", "rich>=13.9.4"]

[project.scripts]
commit-suggestions = "commit_suggestions.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
